# fastapi-sqlalchemy-postgres-example

./: README.md  alembic.ini  docker-compose.yml  main.py  models.py  pyproject.toml
alembic/: env.py
alembic/versions/: 55d536ba9018_add_drink_table.py  c03c8e9f7e35_first_migration.py
schemas/: drink_schema.py  food_schema.py  user_schema.py
