[tool.poetry]
name = "fastapi-sqlalchemy-postgres-example"
version = "0.1.0"
description = ""
authors = ["Mark Freedman <mark.freedman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "^0.14.0"
fastapi = "^0.65.2"
pydantic = "^1.8.2"
requests = "^2.25.1"
alembic = "^1.6.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
